--- a/src/Components/HornedBeast/HornedBeast.css
+++ b/src/Components/HornedBeast/HornedBeast.css
@@ -28,6 +28,8 @@ h1 {
   align-items: center;
   justify-content: center;
   display: block;
+    object-fit: cover;
+  object-position: center;
 }
 
 p {
@@ -36,4 +38,8 @@ p {
   font-size: 20px;  
   color: rgb(199, 114, 203);
 
+}
+.like{
+  margin-right: 0.5rem;
+  cursor: pointer;
 }
