--- a/src/Components/HornedBeast/HornedBeast.css
+++ b/src/Components/HornedBeast/HornedBeast.css
@@ -1,45 +1,35 @@
-* {
-  box-sizing: border-box;
-}
-.hornedBeast-div {
-  background-color: rgba(177, 177, 217, 0.165);
-  padding: 1rem;
-  margin: 1rem;
-  display: flex;
-  flex-direction: column;
+/* .hb-container {
+  width: 45vw;
 }
 
-h1 {
-  color: rgb(199, 114, 203);
-  font-size: 1.5rem;
-  font-weight: 600;
-  text-align: center;
-  padding: 0.5rem;
-  text-align: center;
-
-}
-
-.img {
+img {
   width: 100%;
-  height: 550px;
-  border: 5px solid pink;
-  border-radius: 10px;
-  margin-top: 1rem;
-  align-items: center;
-  justify-content: center;
-  display: block;
-    object-fit: cover;
+  height: 45vw;
+  object-fit: cover;
+  object-position: center left;
+}
+
+img:last-of-type {
+  object-position: right;
+}
+
+.heart {
+  margin-right: 0.5rem;
+  cursor: pointer;
+} */
+
+.hb-container {
+  width: 100%;
+}
+
+img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
   object-position: center;
 }
 
-p {
-    text-align: center;
-  padding: 0.2rem;
-  font-size: 20px;  
-  color: rgb(199, 114, 203);
-
-}
-.like{
+.heart {
   margin-right: 0.5rem;
   cursor: pointer;
 }
