--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,6 +1,17 @@
-.header{
-    text-align: center;
-    color: rgb(128, 128, 213);
-    font-size: 25px;
-    letter-spacing: 3px;
+header {
+  padding: 1rem;
+  background-color: rgb(157, 155, 235);
+  color: white;
+  display: flex;
+  justify-content: space-between;
+  align-items: baseline;
+}
+
+.horns-label {
+  font-size: 1.25rem;
+  margin-right: 0.5rem;
+}
+
+#hornsInput {
+  width: 100px;
 }
